--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@googlemaps/react-wrapper": "^1.1.35",
-    "@react-google-maps/api": "^2.19.0",
-    "google-map-react": "^2.2.1",
+    "axios": "^1.4.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
+    "react-query": "^3.39.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
