--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyBQsMl1bij9qv14vVd2CGj0Og0mwFzVjio"
-VITE_MAP_ID="49810861c5988633"
+VITE_API_HOST=https://northside-tales.onrender.com
