--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
+    "leaflet-easybutton": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
